client/templates/links/links.import.less
.g-links {
  .col-sm-4 {
  	padding: 15px;
    .m-link {
      .g-content {
        display: block;
        background: @light-blue;
        line-height: 40px;
        border: 2px solid @light-blue;
        box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
        .g-box0 {
          padding-left: 15px;
          height: 40px;
          color: #475669;
        }
        .g-box1 {
          img {
            width: 100%;
            height: percentage(113/233);
          }
        }
      }
    }
  }
}

